<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/number_picker_time"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/number_picker_hour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:hint="@string/hour_hint"
            android:inputType="number"
            android:textSize="@dimen/number_picker_hour_size"
            android:textColor="@color/clock_blue"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_separator"
            android:textSize="60sp"
            android:textColor="@color/clock_blue"/>
        <EditText
            android:id="@+id/number_picker_minute"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:hint="@string/minute_hint"
            android:textSize="@dimen/number_picker_minute_size"
            android:inputType="number"
            android:textColor="@color/clock_blue"
            >
            <requestFocus/>
        </EditText>
    </LinearLayout>
    <Button
        android:id="@+id/number_picker_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="25sp"
        android:layout_below="@id/number_picker_time"
        android:text="@android:string/ok"
        android:textColor="@color/clock_blue"
        style="@android:style/Widget.Holo.Button.Borderless"
        />
</RelativeLayout>